regression/fail/modules.34.sml
signature S =
   sig
      type 'a t
   end where type 'a t = 'b list
